--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -75,13 +75,18 @@
 
             <!-- Sort -->
             <div class="col-sm-4">
-                <form>
-                    <select class="form-select border border-primary w-auto" name="handle_by" onchange="submit()">
-                        <option selected disabled>Handle by</option>
-                        <option th:each="emp : ${employees}"
-                                th:selected="${handle_by == emp.name}" th:value="${emp.name}" th:text="${emp.name}"></option>
-                    </select>
-                </form>
+                <div class="d-flex flex-nowrap">
+                    <form class="me-2">
+                        <select class="form-select border border-primary w-auto" name="handle_by" onchange="submit()">
+                            <option selected disabled>Handle by</option>
+                            <option th:each="emp : ${employees}"
+                                    th:selected="${handle_by == emp.name}" th:value="${emp.name}" th:text="${emp.name}"></option>
+                        </select>
+                    </form>
+                    <button class="btn btn-danger" th:attr="onclick=|clearHandleBySort('${active}')|"
+                            th:if="${handle_by != null}">
+                        <i class="fa-solid fa-xmark"></i> Clear</button>
+                </div>
             </div>
 
             <!-- Table -->
@@ -322,6 +327,9 @@
     <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
 
     <script>
+        function clearHandleBySort(active) {
+            window.location = '/orders/' + active;
+        }
         function placeTrigger() {
             let select = document.getElementById('search-option-select');
             let searchInputField = document.getElementById('search-field');
