--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -12,6 +12,10 @@
 
     <!-- Font awesome css -->
     <link th:replace="~{frags/general-frags.html :: fa-all-min-css}">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.css" integrity="sha512-MQXduO8IQnJVq1qmySpN87QQkiR1bZHtorbJBD0tzy7/0U9+YIC93QWHeGTEoojMVHWWNkoCp8V6OzVSYrX0oQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.js" integrity="sha512-K/oyQtMXpxI4+K0W7H25UopjM8pzq0yrVdFdG21Fh5dBe91I40pDd9A4lzNlHPHBIP2cwZuoxaUSX0GJSObvGA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
     <!-- Header -->
@@ -48,45 +52,86 @@
                 </ul>
             </div>
 
-            <!-- Search -->
-            <div class="col-sm-5">
-                <form id="search-form">
-                    <div class="input-group mb-3">
-                        <select id="search-option-select" class="form-select border border-primary" style="max-width: 10px" name="search_in"
-                                onchange="placeTrigger()">
-                            <option th:selected="${search_in == 'name'}" value="name">Name</option>
-                            <option th:selected="${search_in == 'phoneNo'}" value="phoneNo">PhoneNo</option>
-                            <option th:selected="${search_in == 'email'}" value="email">Email</option>
-                        </select>
-                        <input id="search-field" class="form-control border border-primary" type="text" name="search"
-                               th:attr="value=${search != null ? search : ''},
-                               placeholder='Search orders using customer ' + ${search_in == null ? 'name' : search_in}"
-                               autocomplete="on">
-                        <a id="clear-btn" class="btn btn-outline-danger"
-                        th:attr="style='display:' + ${(search == null || #strings.isEmpty(search)) ? 'none': 'block'}"
-                        onclick="clearSearch()">
-                            <i class="fa-solid fa-xmark"></i></a>
-                        <button class="btn btn-outline-primary" type="submit" value="Search">
-                            <i class="fa-solid fa-magnifying-glass"></i> Search
-                        </button>
-                    </div>
-                </form>
-            </div>
+            <!-- Search and sort -->
+            <div class="col-sm-12 d-flex flex-row">
 
-            <!-- Sort -->
-            <div sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DEVELOPER')" class="col-sm-4">
-                <div class="d-flex flex-nowrap">
-                    <form class="me-2">
-                        <select class="form-select border border-primary w-auto" name="handle_by" onchange="submit()">
-                            <option selected disabled>Handle by</option>
-                            <option th:each="emp : ${employees}"
-                                    th:selected="${handle_by == emp.name}" th:value="${emp.name}" th:text="${emp.name}"></option>
-                        </select>
+                <!-- Search -->
+                <div class="me-3">
+                    <form id="search-form">
+                        <div class="input-group mb-3">
+                            <select id="search-option-select" class="form-select border border-primary" style="max-width: 10px" name="search_in"
+                                    onchange="placeTrigger()">
+                                <option th:selected="${search_in == 'name'}" value="name">Name</option>
+                                <option th:selected="${search_in == 'phoneNo'}" value="phoneNo">PhoneNo</option>
+                                <option th:selected="${search_in == 'email'}" value="email">Email</option>
+                            </select>
+                            <input id="search-field" class="form-control border border-primary" type="text" name="search"
+                                   th:attr="value=${search != null ? search : ''},
+                                   placeholder='Search orders using customer ' + ${search_in == null ? 'name' : search_in}"
+                                   autocomplete="on">
+                            <a id="clear-btn" class="btn btn-outline-danger"
+                            th:attr="style='display:' + ${(search == null || #strings.isEmpty(search)) ? 'none': 'block'}"
+                            onclick="clearSearch()">
+                                <i class="fa-solid fa-xmark"></i></a>
+                            <button class="btn btn-outline-primary" type="submit" value="Search">
+                                <i class="fa-solid fa-magnifying-glass"></i> Search
+                            </button>
+                        </div>
                     </form>
-                    <button class="btn btn-danger" th:attr="onclick=|clearHandleBySort('${active}')|"
-                            th:if="${handle_by != null}">
-                        <i class="fa-solid fa-xmark"></i> Clear</button>
                 </div>
+
+                <!-- Sort handle by -->
+                <div class="me-3" sec:authorize="hasAnyRole('ROLE_ADMIN', 'ROLE_DEVELOPER')">
+                    <div class="d-flex flex-nowrap">
+                        <form>
+                            <select class="form-select border border-primary w-auto" name="handle_by" onchange="submit()">
+                                <option selected disabled>Handle by</option>
+                                <option th:each="emp : ${employees}"
+                                        th:selected="${handle_by == emp.name}" th:value="${emp.name}" th:text="${emp.name}"></option>
+                            </select>
+                        </form>
+                    </div>
+                </div>
+
+                <!-- Sort date -->
+                <div class="me-3 w-auto">
+
+                    <!-- Sort by date modal trigger button -->
+                    <button class="btn btn-outline-primary" data-bs-toggle="modal"
+                            data-bs-target="#sort-by-date-modal">Sort by date</button>
+
+                    <!-- Show sort by date modal -->
+                    <div class="modal fade" th:id="sort-by-date-modal" tabindex="-1"
+                         aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h1 class="modal-title fs-5">Sort by date</h1>
+                                </div>
+                                <div class="modal-body">
+                                    <form>
+                                        <div class="mb-3">
+                                            <label for="datepicker1">Start date:</label>
+                                            <input class="form-control" type="date" id="datepicker1" name="start_date"/>
+                                        </div>
+                                        <div class="mb-3">
+                                            <label for="datepicker2">End date:</label>
+                                            <input class="form-control" type="date" id="datepicker2" name="end_date"/>
+                                            <span class="form-text">For particular date, Leave this field empty.</span>
+                                        </div>
+                                        <button class="btn btn-primary" type="submit">Submit</button>
+                                    </form>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <a class="btn btn-danger w-auto" th:attr="onclick=|clearSort('${active}')|" th:if="${handle_by != null}">
+                    Clear</a>
             </div>
 
             <!-- Table -->
@@ -327,7 +372,13 @@
     <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
 
     <script>
-        function clearHandleBySort(active) {
+        document.addEventListener("DOMContentLoaded", function () {
+            flatpickr("#datepicker1", {});
+        });
+        document.addEventListener("DOMContentLoaded", function () {
+            flatpickr("#datepicker2", {});
+        });
+        function clearSort(active) {
             window.location = '/orders/' + active;
         }
         function placeTrigger() {
