Renamed styles.css -> form-styles.css and removed the css from unnecessary html pages and added to necessary html pages and refactored the changes

--- a/src/main/resources/templates/employee/save-employee.html
+++ b/src/main/resources/templates/employee/save-employee.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Save employee</title>
-  <!--  Top css  -->
-  <link th:replace="~{frags/general-frags.html :: top-styles-css}">
+  <!--  Top form css  -->
+  <link th:replace="~{frags/general-frags.html :: top-form-styles-css}">
 
   <!-- Bootstrap css -->
   <link th:replace="~{frags/general-frags.html :: bs-min-css}">
