--- a/src/main/resources/templates/employee/save-emp-info.html
+++ b/src/main/resources/templates/employee/save-emp-info.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Save employee info</title>
-    <!--  Top css  -->
-    <link th:replace="~{frags/general-frags.html :: top-styles-css}">
+    <!--  Top form css  -->
+    <link th:replace="~{frags/general-frags.html :: top-form-styles-css}">
 
     <!-- Bootstrap css -->
     <link th:replace="~{frags/general-frags.html :: bs-min-css}">
