--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link th:fragment="top-styles-css" type="text/css" href="/css/styles.css" rel="stylesheet">
+    <link th:fragment="top-form-styles-css" type="text/css" href="/css/form-styles.css" rel="stylesheet">
     <link th:fragment="bs-min-css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link th:fragment="fa-all-min-css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
     <script th:fragment="top-script-js" src="/js/script.js"></script>
