Removed common function for view pages and created a separate script file and refactored the changes

--- a/src/main/resources/templates/order/dimensions/dimensions.html
+++ b/src/main/resources/templates/order/dimensions/dimensions.html
@@ -98,5 +98,7 @@
 
     <!-- Bottom script and js -->
     <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
+
+    <script th:replace="~{frags/general-frags.html :: top-view-script-js}"></script>
 </body>
 </html>
