--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -133,5 +133,7 @@
 
     <!-- Bottom script and js -->
     <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
+
+    <script th:replace="~{frags/general-frags.html :: top-view-script-js}"></script>
 </body>
 </html>
