--- a/src/main/resources/templates/frags/general-frags.html
+++ b/src/main/resources/templates/frags/general-frags.html
@@ -9,6 +9,7 @@
     <link th:fragment="fa-all-min-css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" >
     <script th:fragment="top-script-js" src="/js/script.js"></script>
     <script th:fragment="top-view-script-js" src="/js/view-script.js"></script>
+    <script th:fragment="top-search-script-js" src="/js/search-script.js"></script>
     <script th:fragment="bs-bundle-min-js" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
 <body>
