--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -103,7 +103,7 @@
                 </div>
 
 
-                <a class="btn btn-danger" th:attr="onclick=|clearSort('${active}')|"
+                <a class="btn btn-danger" th:attr="onclick=|clearSort()|"
                    th:if="${handle_by != null} or ${start_date != null}">
                     Clear</a>
             </div>
@@ -345,15 +345,15 @@
     <!-- Footer -->
     <footer th:replace="~{frags/general-frags.html :: footer}"></footer>
 
-    <script>
+    <script th:inline="javascript">
         document.addEventListener("DOMContentLoaded", function () {
             flatpickr("#datepicker1", {});
         });
         document.addEventListener("DOMContentLoaded", function () {
             flatpickr("#datepicker2", {});
         });
-        function clearSort(active) {
-            window.location = '/orders/' + active;
+        function clearSort() {
+            window.location = '/orders/' + /*[[${active}]]*/
         }
     </script>
 
