--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -96,6 +96,7 @@
   <!-- Bottom script and js -->
   <div th:replace="~{frags/general-frags.html :: bottom-script-n-js}"></div>
 
+  <!-- Top js scripts -->
   <script th:replace="~{frags/general-frags.html :: top-view-script-js}"></script>
 </body>
 </html>
