--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:fragment="emp-save-form(isAccountAllowed, isBtnSAllowed, actionLink, actionBtnName)">
-    <form class="row g-3" action="#" th:action="@{${actionLink}}" th:object="${employee}" method="post">
+    <form id="ae-save-form" class="row g-3" action="#" th:action="@{${actionLink}}" th:object="${employee}" method="post">
         <input type="hidden" th:field="*{employeeId}">
         <div class="col-md-6 form-floating mb-3">
             <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="Venkatappa Raju" required>
