--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -45,11 +45,11 @@
 
             <!-- Links -->
             <div class="col-sm-4">
-<!--                <a class="btn btn-outline-primary" href="new-employee">New employee</a>-->
+                <a class="btn btn-outline-primary" href="new-employee">New employee</a>
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                    New employee
-                </button>
+<!--                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">-->
+<!--                    New employee-->
+<!--                </button>-->
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -76,8 +76,7 @@
                         </div>
                     </div>
                 </div>
-                <a class="btn btn-outline-primary"
-                   onclick="popupWindow('http://localhost:8080/employees/roles/view', 'Roles')">Roles</a>
+                <a class="btn btn-outline-primary" href="roles/view">Roles</a>
             </div>
 
             <!-- Table -->
