--- a/src/main/resources/templates/frags/emp-frags.html
+++ b/src/main/resources/templates/frags/emp-frags.html
@@ -34,7 +34,7 @@
                     ></option>
                 </select>
                 <a class="btn btn-outline-primary"
-                        onclick="popupWindow('http://localhost:8080/employees/roles/view', 'Roles')">Roles</a>
+                        href="roles/view">Roles</a>
             </div>
         </div>
         <div class="col-md-4">
