--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -25,9 +25,8 @@
             <div class="mb-3">
                 <a class="btn btn-outline-primary btn-sm" href="new-order">New order</a>
                 <a class="btn btn-outline-primary btn-sm"
-                   onclick="popupWindow('http://localhost:8080/orders/service-types/view', 'Service types')">Service types</a>
-                <a class="btn btn-outline-primary btn-sm"
-                   onclick="popupWindow('http://localhost:8080/orders/dimensions/view', 'Dimensions')">Dimensions</a>
+                   href="service-types/view">Service types</a>
+                <a class="btn btn-outline-primary btn-sm" href="dimensions/view">Dimensions</a>
             </div>
 
             <!-- Nav tabs -->
