--- a/src/main/resources/templates/employee/role/role.html
+++ b/src/main/resources/templates/employee/role/role.html
@@ -81,6 +81,7 @@
   <!-- Pagination -->
   <nav>
     <ul class="pagination justify-content-center">
+      <button class="btn btn-outline-secondary me-2" onclick="history.back()">< Back</button>
       <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
         <a class="page-link" href="view?page=0">Start</a></li>
       <li class="page-item" th:classappend="${currentPage <= 0} ? 'disabled' : ''">
