--- a/src/main/resources/templates/order/save-order.html
+++ b/src/main/resources/templates/order/save-order.html
@@ -69,8 +69,7 @@
                               th:value="${serviceType.id}"
                               th:text="${serviceType.name}"></option>
                     </select>
-                    <a class="btn btn-outline-primary"
-                       onclick="popupWindow('http://localhost:8080/orders/service-types/view', 'Service types')">Service types</a>
+                    <a class="btn btn-outline-primary" href="service-types/view">Service types</a>
                 </div>
               </div>
               <div class="col-lg-6 col-md-12 mb-3">
@@ -81,8 +80,7 @@
                               th:value="${dimension.id}"
                               th:text="${dimension.name}"></option>
                     </select>
-                    <a class="btn btn-outline-primary"
-                       onclick="popupWindow('http://localhost:8080/orders/dimensions/view', 'Dimensions')">Dimensions</a>
+                    <a class="btn btn-outline-primary" href="dimensions/view">Dimensions</a>
                 </div>
               </div>
               <div class="col-md-4 form-floating mb-3">
